# AirBridge.S3

./: .gitignore  CMakeLists.txt  README.md  generate_certs.py  partitions_16MB.csv  patch_ecm_cmake.py  patch_ncm_cmake.py  patch_tinyusb.py  platformio.ini  sdkconfig.defaults
docs/: AirBridge_Pro_Technical_Spec.md  README.md
hardware/: AirBridge_Pro.kicad_pcb  AirBridge_Pro.kicad_pro  AirBridge_Pro.kicad_sch  fp-lib-table  generate_schematic.py  kicad_builder.py  place_components.py
hardware/ST7789-320x240.pretty/: ST7789-320x240.kicad_mod
src/: CMakeLists.txt  LGFX_Config.h  config.cpp  config.h  display.cpp  display.h  main.cpp  nat.cpp  nat.h  sysmon.h  usb_net.cpp  usb_net.h  webserver.cpp  webserver.h  wifi_ap.cpp  wifi_ap.h
